# sensitive-stock

./: .gitignore  AGENTS.md  README.md  openapi.json
backend/: .env.example  README.md  factor_analysis.py  file_env.py  portfolio_optimizer.py  pyproject.toml  wsgi.py
backend/app/: __init__.py  auth.py  config.py  errors.py  openapi.py
backend/app/api/: __init__.py  auth.py  backtests.py  capabilities.py  daily.py  diagnosis.py  factors.py  health.py  market.py  openapi.py  placeholders.py  portfolio.py  qa.py  screener.py  watchlist.py
backend/app/schemas/: auth.py  backtests.py  daily.py  market.py  research.py  stock_detail.py  stock_qa.py  strategy.py  watchlist.py
backend/app/services/: __init__.py  auth.py  (+17 more)
backend/backtesting/: __init__.py  data.py  engine.py  indicators.py  pipeline.py  presets.py  strategy.py
backend/scripts/: generate_openapi.py
backend/tests/: auth_helpers.py  conftest.py  test_analytics_contracts.py  test_auth_api.py  test_backtest_engine_upgrade.py  test_backtest_reporting_contract.py  test_backtests_api.py  test_cninfo_disclosure_news_source.py  test_data_provider_priority.py  test_deepseek_prediction_service.py  test_event_hints_service.py  test_extended_market_news_sources.py  test_file_env_config.py  test_market_api.py  test_market_data_resilience.py  test_market_predictions_api.py  test_multisource_news_service.py  test_news_cache_resilience.py  test_news_intelligence_service.py  test_openapi_publication.py  test_platform_api.py  test_prediction_history_service.py  test_research_capabilities_api.py  test_wsgi_entrypoint.py
(+253 files in other folders)
